# weather-triggered-pin-control

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build-macos.sh  build-windows.bat  sdkconfig.defaults
.claude/: settings.local.json
components/config_utils/: CMakeLists.txt  config_print.c
components/hardware_config/include/: config.h.example  hardware_config.h
components/led_gpio/: CMakeLists.txt  led_gpio.c
components/led_gpio/include/: led_gpio.h
components/remote_logging/: CMakeLists.txt  remote_logging.c
components/remote_logging/include/: remote_logging.h
components/rgb_status_led/: CMakeLists.txt
components/rgb_status_led/include/: rgb_led_control.h
components/rtc_time/: CMakeLists.txt  timezone_helper.c
components/rtc_time/include/: rtc_helper.h
components/weather_client/: CMakeLists.txt  cloudcover_leds.c  weather_fetch.c
components/weather_common/: CMakeLists.txt  README.md  config_print.c  led_control.c  rgb_led_control.c  rtc_helper.c  timezone_helper.c  weather_fetch.c
components/weather_common/include/: config.h.example  config_print.h  hardware_config.h  led_control.h  rgb_led_control.h  rtc_helper.h  timezone_helper.h  weather_fetch.h
components/weather_diagnostics/: CMakeLists.txt  weather_diagnostics.c
components/wifi_helper/: CMakeLists.txt  wifi_helper.c
main/: CMakeLists.txt  Kconfig.projbuild  Kconfig.projbuild.unused  config.h.example  main.c
server_examples/nodejs/: README.md  log_server.js  package.json
tools/log_server/: README.md  log_server.py
tools/test_apps/: build-test.bat  build-test.sh
(+30 files in other folders)
